[gd_scene load_steps=3 format=2]

[ext_resource path="res://resources/Objects/Pickups/berzerk_bonus.png" type="Texture" id=1]
[ext_resource path="res://scripts/ui/StatusIcon.gd" type="Script" id=2]

[node name="StatusIcon" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlinkTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="BlinkEnableTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="BlinkTimer" to="." method="_on_BlinkTimer_timeout"]
[connection signal="timeout" from="BlinkEnableTimer" to="." method="_on_BlinkEnableTimer_timeout"]
